2007-12-27  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/sha1.c
		- Fix WPA passphrase generation on big endian (rh #426233)

2007-12-27  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wpa-psk.c
		- (fill_connection): Ad-Hoc connections use a key-mgmt value of
			'wpa-none', not 'wpa-psk'

	* src/wireless-dialog.c
	  src/wireless-dialog.h
		- (nma_wireless_dialog_new): new argument to indicate user-created
			Ad-Hoc networks
		- (dialog_init): handle user-created Ad-Hoc networks
		- (security_combo_init): determine whether or not the network being
			modified is Ad-Hoc and pass that status to nm_utils_security_valid()

	* src/applet.c
		- (applet_settings_new_secrets_requested_cb, get_more_info,
		   other_wireless_activate_cb): handle new adhoc argument for
			nma_wireless_dialog_new()
		- (new_network_item_selected): implement
		- (wireless_dialog_response_cb): don't autoconnect to Ad-Hoc networks
			by default

2007-12-24  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/Makefile.am
		- Include utils for channel<->frequency conversion functions

	* src/utils/utils.c
	  src/utils/utils.h
		- (utils_freq_to_channel, utils_channel_to_freq, utils_find_next_channel):
			add channel<->frequency conversion and helper functions

	* src/connection-editor/nm-connection-editor.glade
		- Fix connection editor pages so they are editable in Glade

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
		- Fix up page handling; the connection editor object, when calling
			glade_xml_new(), must not allow Glade to parse and construct the
			connection _list_ dialog box; otherwise when the connection editor
			object gets destroyed it'll destroy the cached copy of the connection
			list object too, resulting in badness.
		- Make spinbuttons show 'default' when the value is the default value
		- Make the Channel spinbutton snap to the correct next channel when